--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
 
         <div class="contact">
             <h3 class="footer-title">Contact Us</h3>
+            <iframe title="" class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58373.545219799154!2d90.22635139107065!3d23.877326074803047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755ebd3d6df9569%3A0x277b3819d4da3e91!2sSavar%20Union!5e0!3m2!1sen!2sbd!4v1679664212361!5m2!1sen!2sbd" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <ul>
                 <li class="contact-info">Savar, Dhaka</li>
                 <li class="contact-info">What'sapp: <a href="tel:">+8801712345678</a></li>
