--- a/story.html
+++ b/story.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- CSS Link -->
     <link rel="stylesheet" href="Styles/header.css">
-    <link rel="stylesheet" href="Styles/patners.css">
+    <link rel="stylesheet" href="Styles/story.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
     <title>USD | Story</title>
@@ -77,9 +77,14 @@
 
     </nav>
     <!-- Nav Bar End -->
-    <!-- Activities Section Start -->
+    <!-- Story Section Start -->
+
+    <section class="story">
+        <h1 class="story-title">Our Story</h1>
+        <p class="story-text"><sup class="comma">"</sup>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, obcaecati, repellendus doloremque sunt eligendi, laborum iste facere illum deserunt laudantium sapiente? Nam, accusantium repellendus tempora exercitationem autem quaerat aspernatur pariatur tempore nobis! Neque consequatur quisquam, deserunt non ratione ea minima aliquid iste modi sequi consequuntur quia sint tempora suscipit. Praesentium sequi ipsa velit sit laudantium impedit rem harum non voluptate in laborum, quibusdam tempore vitae consequuntur veniam aliquid quisquam. Nulla impedit temporibus veniam, obcaecati accusamus sed totam iusto laborum consectetur omnis asperiores dolore quia nam quas perspiciatis eum minima harum dolorum nobis, cumque illum adipisci sequi iste illo! Velit, qui!<sup class="comma">"</sup></p>
+    </section>
     
-    <!-- Activities Section End -->
+    <!-- Story Section End -->
 
     <!-- FOOTER Start -->
     <footer class="footer">
@@ -113,6 +118,7 @@
 
         <div class="contact">
             <h3 class="footer-title">Contact Us</h3>
+            <iframe title="" class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58373.545219799154!2d90.22635139107065!3d23.877326074803047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755ebd3d6df9569%3A0x277b3819d4da3e91!2sSavar%20Union!5e0!3m2!1sen!2sbd!4v1679664212361!5m2!1sen!2sbd" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <ul>
                 <li class="contact-info">Savar, Dhaka</li>
                 <li class="contact-info">What'sapp: <a href="tel:">+8801712345678</a></li>
