--- a/mission.html
+++ b/mission.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- CSS Link -->
     <link rel="stylesheet" href="Styles/header.css">
-    <link rel="stylesheet" href="Styles/patners.css">
+    <link rel="stylesheet" href="Styles/mission.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
     <title>USD | Mission</title>
@@ -77,9 +77,13 @@
 
     </nav>
     <!-- Nav Bar End -->
-    <!-- Activities Section Start -->
+    <!-- Mission Section Start -->
+    <section class="mission">
+        <h1 class="mission-title">Our Mission</h1>
+        <p class="mission-text"><sub class="comma">"</sub>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, obcaecati, repellendus doloremque sunt eligendi, laborum iste facere illum deserunt laudantium sapiente? Nam, accusantium repellendus tempora exercitationem autem quaerat aspernatur pariatur tempore nobis! Neque consequatur quisquam, deserunt non ratione ea minima aliquid iste modi sequi consequuntur quia sint tempora suscipit. Praesentium sequi ipsa velit sit laudantium impedit rem harum non voluptate in laborum, quibusdam tempore vitae consequuntur veniam aliquid quisquam. Nulla impedit temporibus veniam, obcaecati accusamus sed totam iusto laborum consectetur omnis asperiores dolore quia nam quas perspiciatis eum minima harum dolorum nobis, cumque illum adipisci sequi iste illo! Velit, qui!<sub class="comma">"</sub></p>
+    </section>
     
-    <!-- Activities Section End -->
+    <!-- Mission Section End -->
 
     <!-- FOOTER Start -->
     <footer class="footer">
