--- a/team.html
+++ b/team.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- CSS Link -->
     <link rel="stylesheet" href="Styles/header.css">
-    <link rel="stylesheet" href="Styles/patners.css">
+    <link rel="stylesheet" href="Styles/team.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
     <title>USD | Team</title>
@@ -77,9 +77,31 @@
 
     </nav>
     <!-- Nav Bar End -->
-    <!-- Activities Section Start -->
-    
-    <!-- Activities Section End -->
+    <!-- Team Section Start -->
+    <section class="teams">
+        <div class="team">
+            <img src="Assets/Images/Team/Baki.jpg" alt="">
+            <h3 class="name">Abul hasan BakiBillah</h3>
+            <h5 class="designation">Designation</h5>
+            <p class="info">Lecturer at Bangladesh University of Health Sciecnes <br> Dhaka Bangladesh</p>
+        </div>
+
+        <div class="team">
+            <img src="Assets/Images/Team/Minhaj.jpg" alt="">
+            <h3 class="name">Minhazul Abedin</h3>
+            <h5 class="designation">Designation</h5>
+            <p class="info">Studying MSc <br> Dhaka University</p>
+        </div>
+
+        <div class="team">
+            <img src="Assets/Images/Team/Adil.jpg" alt="">
+            <h3 class="name">Adiluzzaman Adil</h3>
+            <h5 class="designation">Designation</h5>
+            <p class="info">studying MSc in IT <br> German University</p>
+        </div>
+
+    </section>
+    <!-- Team Section End -->
 
     <!-- FOOTER Start -->
     <footer class="footer">
