--- a/team.html
+++ b/team.html
@@ -90,14 +90,14 @@
             <img src="Assets/Images/Team/Minhaj.jpg" alt="">
             <h3 class="name">Minhazul Abedin</h3>
             <h5 class="designation">Designation</h5>
-            <p class="info">Studying MSc <br> Dhaka University</p>
+            <p class="info">MA, MDM (Development Consultant)<br>University of Dhaka</p>
         </div>
 
         <div class="team">
             <img src="Assets/Images/Team/Adil.jpg" alt="">
             <h3 class="name">Adiluzzaman Adil</h3>
             <h5 class="designation">Designation</h5>
-            <p class="info">studying MSc in IT <br> German University</p>
+            <p class="info">MSc in IT <br> German University</p>
         </div>
 
     </section>
