--- a/PhD.html
+++ b/PhD.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- CSS Link -->
     <link rel="stylesheet" href="Styles/header.css">
-    <link rel="stylesheet" href="Styles/patners.css">
+    <link rel="stylesheet" href="Styles/phd.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
     <title>USD | PhD</title>
@@ -77,9 +77,30 @@
 
     </nav>
     <!-- Nav Bar End -->
-    <!-- Activities Section Start -->
+    <!-- PhD Section Start -->
+    <section class="phd">
+        <h3><a class="phd-title" href="#sustainable-development">PhD in Sustainable Development </a></h3>
+        <h3><a class="phd-title" href="#public-health">PhD in Public Health </a></h3>
+        <h3><a class="phd-title" href="#islamic-studies">PhD in Islamic Studies  </a></h3>
+    </section>
+
+    <section id="sustainable-development" class="phd-section">
+        <h1 class="phd-header">PhD in Sustainable Development</h1>
+        <p class="phd-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga officiis sequi dignissimos, ipsam vel eveniet? Enim, minima voluptatibus, nesciunt labore quam laborum ipsum sequi, totam quisquam ullam optio sit iusto eveniet maxime a aspernatur accusamus recusandae veritatis quia sint repellendus delectus quo qui molestiae. Rerum tempore aperiam praesentium qui possimus laboriosam sed quod obcaecati commodi voluptatum id dignissimos cum blanditiis quae maiores similique quasi recusandae quos, laudantium mollitia cupiditate accusamus ea earum deleniti. Distinctio ratione ad sapiente provident vel, officiis dicta porro eaque esse dolor, quia quaerat expedita, consectetur voluptatibus veritatis fugit labore delectus facilis hic. Voluptatibus magnam corporis corrupti officiis debitis natus aliquam temporibus omnis assumenda deleniti dolorum repellat dicta deserunt vitae sed accusamus animi in qui, explicabo inventore cupiditate! Fuga error voluptates nesciunt quam, officiis voluptas, quis aperiam sed exercitationem earum doloremque sint ratione facere tempore officia asperiores sapiente dolores accusamus molestias sit ad dolor dolore, debitis aspernatur! Fugiat, illum nam quibusdam nostrum sint incidunt soluta assumenda! Ut magni maxime quam similique, aut molestias obcaecati facilis, sed minus tenetur tempora ipsam voluptates consequuntur? Facere rerum optio at ex magnam odit a amet quidem cumque dolores fuga tenetur quos eos cum, sequi laborum dolorem blanditiis. Ducimus tempora fuga voluptatem!</p>
+    </section>
+
+    <section id="public-health" class="phd-section">
+        <h1 class="phd-header">PhD in Public Health</h1>
+        <p class="phd-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga officiis sequi dignissimos, ipsam vel eveniet? Enim, minima voluptatibus, nesciunt labore quam laborum ipsum sequi, totam quisquam ullam optio sit iusto eveniet maxime a aspernatur accusamus recusandae veritatis quia sint repellendus delectus quo qui molestiae. Rerum tempore aperiam praesentium qui possimus laboriosam sed quod obcaecati commodi voluptatum id dignissimos cum blanditiis quae maiores similique quasi recusandae quos, laudantium mollitia cupiditate accusamus ea earum deleniti. Distinctio ratione ad sapiente provident vel, officiis dicta porro eaque esse dolor, quia quaerat expedita, consectetur voluptatibus veritatis fugit labore delectus facilis hic. Voluptatibus magnam corporis corrupti officiis debitis natus aliquam temporibus omnis assumenda deleniti dolorum repellat dicta deserunt vitae sed accusamus animi in qui, explicabo inventore cupiditate! Fuga error voluptates nesciunt quam, officiis voluptas, quis aperiam sed exercitationem earum doloremque sint ratione facere tempore officia asperiores sapiente dolores accusamus molestias sit ad dolor dolore, debitis aspernatur! Fugiat, illum nam quibusdam nostrum sint incidunt soluta assumenda! Ut magni maxime quam similique, aut molestias obcaecati facilis, sed minus tenetur tempora ipsam voluptates consequuntur? Facere rerum optio at ex magnam odit a amet quidem cumque dolores fuga tenetur quos eos cum, sequi laborum dolorem blanditiis. Ducimus tempora fuga voluptatem!</p>
+    </section>
+
+    <section id="islamic-studies" class="phd-section">
+        <h1 class="phd-header">PhD in Islamic Studies</h1>
+        <p class="phd-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga officiis sequi dignissimos, ipsam vel eveniet? Enim, minima voluptatibus, nesciunt labore quam laborum ipsum sequi, totam quisquam ullam optio sit iusto eveniet maxime a aspernatur accusamus recusandae veritatis quia sint repellendus delectus quo qui molestiae. Rerum tempore aperiam praesentium qui possimus laboriosam sed quod obcaecati commodi voluptatum id dignissimos cum blanditiis quae maiores similique quasi recusandae quos, laudantium mollitia cupiditate accusamus ea earum deleniti. Distinctio ratione ad sapiente provident vel, officiis dicta porro eaque esse dolor, quia quaerat expedita, consectetur voluptatibus veritatis fugit labore delectus facilis hic. Voluptatibus magnam corporis corrupti officiis debitis natus aliquam temporibus omnis assumenda deleniti dolorum repellat dicta deserunt vitae sed accusamus animi in qui, explicabo inventore cupiditate! Fuga error voluptates nesciunt quam, officiis voluptas, quis aperiam sed exercitationem earum doloremque sint ratione facere tempore officia asperiores sapiente dolores accusamus molestias sit ad dolor dolore, debitis aspernatur! Fugiat, illum nam quibusdam nostrum sint incidunt soluta assumenda! Ut magni maxime quam similique, aut molestias obcaecati facilis, sed minus tenetur tempora ipsam voluptates consequuntur? Facere rerum optio at ex magnam odit a amet quidem cumque dolores fuga tenetur quos eos cum, sequi laborum dolorem blanditiis. Ducimus tempora fuga voluptatem!</p>
+    </section>
     
-    <!-- Activities Section End -->
+    
+    <!-- PhD Section End -->
 
     <!-- FOOTER Start -->
     <footer class="footer">
