--- a/shortcourse.html
+++ b/shortcourse.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- CSS Link -->
     <link rel="stylesheet" href="Styles/header.css">
-    <link rel="stylesheet" href="Styles/patners.css">
+    <link rel="stylesheet" href="Styles/shortcourse.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
     <title>USD | Short Course</title>
@@ -77,9 +77,21 @@
 
     </nav>
     <!-- Nav Bar End -->
-    <!-- Activities Section Start -->
-    
-    <!-- Activities Section End -->
+    <!-- Short Course Section Start -->
+    <section class="shortcourse">
+        <h3><a class="shortcourse-title" href="#rprp">From Research Proposal To Research Publication</a></h3>
+    </section>
+
+    <section id="rprp" class="shortcourse-section">
+        <h1 class="shortcourse-header">From Research Proposal To Research Publication</h1>
+        <p class="shortcourse-text">Normal Duration: 6-Months</p>
+        <p class="shortcourse-text">Crash Duration: 3-Months</p>
+        <p class="shortcourse-text">In this course, the participants will start from their research proposal with the direct guidance of the facilitator. Then, they will gradually move forward with the step-wise accomplishment. Eventually, the participants will complete the whole manuscript and submit to the journals. Also, they can submit their research manuscript to the International Journal of Knowledge Platform (IJKP) for rapid publication. </p>
+    </section>
+
+
+
+    <!-- Short Course Section End -->
 
     <!-- FOOTER Start -->
     <footer class="footer">
