--- a/workshop.html
+++ b/workshop.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- CSS Link -->
     <link rel="stylesheet" href="Styles/header.css">
-    <link rel="stylesheet" href="Styles/patners.css">
+    <link rel="stylesheet" href="Styles/workshop.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
     <title>USD | Workshop</title>
@@ -77,9 +77,18 @@
 
     </nav>
     <!-- Nav Bar End -->
-    <!-- Activities Section Start -->
+    <!-- Workshop Section Start -->
+    <section class="workshop">
+        <h3><a class="workshop-title" href="#">Comming Soon...</a></h3>
+    </section>
+
+    <section id="" class="workshop-section">
+        <h1 class="workshop-header"></h1>
+        <p class="workshop-text"></p>
+        
+    </section>
     
-    <!-- Activities Section End -->
+    <!-- Workshop Section End -->
 
     <!-- FOOTER Start -->
     <footer class="footer">
