--- a/traning.html
+++ b/traning.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- CSS Link -->
     <link rel="stylesheet" href="Styles/header.css">
-    <link rel="stylesheet" href="Styles/patners.css">
+    <link rel="stylesheet" href="Styles/traning.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
     <title>USD | Traning</title>
@@ -77,9 +77,18 @@
 
     </nav>
     <!-- Nav Bar End -->
-    <!-- Activities Section Start -->
+    <!-- Traning Section Start -->
+    <section class="traning">
+        <h3><a class="traning-title" href="#">Comming Soon...</a></h3>
+    </section>
+
+    <section id="" class="traning-section">
+        <h1 class="traning-header"></h1>
+        <p class="traning-text"></p>
+        
+    </section>
     
-    <!-- Activities Section End -->
+    <!-- Traning Section End -->
 
     <!-- FOOTER Start -->
     <footer class="footer">
