--- a/bechelors.html
+++ b/bechelors.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- CSS Link -->
     <link rel="stylesheet" href="Styles/header.css">
-    <link rel="stylesheet" href="Styles/patners.css">
+    <link rel="stylesheet" href="Styles/bechelors.css">
     <link rel="stylesheet" href="Styles/footer.css">
 
     <title>USD | Bachelors</title>
@@ -77,9 +77,18 @@
 
     </nav>
     <!-- Nav Bar End -->
-    <!-- Activities Section Start -->
+    <!-- bechelor Section Start -->
+    <section class="bechelor">
+        <h3><a class="bechelor-title" href="#">Comming Soon...</a></h3>
+    </section>
+
+    <section id="" class="bechelor-section">
+        <h1 class="bechelor-header"></h1>
+        <p class="bechelor-text"></p>
+        
+    </section>
     
-    <!-- Activities Section End -->
+    <!-- bechelor Section End -->
 
     <!-- FOOTER Start -->
     <footer class="footer">
