--- a/activities.html
+++ b/activities.html
@@ -87,7 +87,7 @@
                 <div class="activities-box-title">Today's Event</div>
                 <p class="activities-box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore facilis soluta suscipit voluptatum
                     assumenda voluptates reprehenderit in eum minus et.</p>
-                <a class="activities-btn" href="Activities/todaysevent.html">Read More</a>
+                <a class="activities-btn" href="todaysevent.html">Read More</a>
             </div>
         </div>
         <div class="activity">
@@ -98,7 +98,7 @@
                 <div class="activities-box-title">Today's Event</div>
                 <p class="activities-box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore facilis soluta suscipit voluptatum
                     assumenda voluptates reprehenderit in eum minus et.</p>
-                <a class="activities-btn" href="Activities/todaysevent.html">Read More</a>
+                <a class="activities-btn" href="todaysevent.html">Read More</a>
             </div>
         </div>
         <div class="activity">
@@ -109,7 +109,7 @@
                 <div class="activities-box-title">Today's Event</div>
                 <p class="activities-box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore facilis soluta suscipit voluptatum
                     assumenda voluptates reprehenderit in eum minus et.</p>
-                <a class="activities-btn" href="Activities/todaysevent.html">Read More</a>
+                <a class="activities-btn" href="todaysevent.html">Read More</a>
             </div>
         </div>
     </section>
