--- a/career.html
+++ b/career.html
@@ -82,27 +82,27 @@
         <div class="career">
             <h1 class="career-title">Human Resource(HR)</h1>
             <p class="career-text">We are looking for a person who is suiatable for our Human Resource.</p>
-            <a class="career-btn" href="Career/forhr.html">Apply Now</a>
+            <a class="career-btn" href="forhr.html">Apply Now</a>
         </div>
         <div class="career">
             <h1 class="career-title">Human Resource(HR)</h1>
             <p class="career-text">We are looking for a person who is suiatable for our Human Resource.</p>
-            <a class="career-btn" href="Career/forhr.html">Apply Now</a>
+            <a class="career-btn" href="forhr.html">Apply Now</a>
         </div>
         <div class="career">
             <h1 class="career-title">Human Resource(HR)</h1>
             <p class="career-text">We are looking for a person who is suiatable for our Human Resource.</p>
-            <a class="career-btn" href="Career/forhr.html">Apply Now</a>
+            <a class="career-btn" href="forhr.html">Apply Now</a>
         </div>
         <div class="career">
             <h1 class="career-title">Human Resource(HR)</h1>
             <p class="career-text">We are looking for a person who is suiatable for our Human Resource.</p>
-            <a class="career-btn" href="Career/forhr.html">Apply Now</a>
+            <a class="career-btn" href="forhr.html">Apply Now</a>
         </div>
         <div class="career">
             <h1 class="career-title">Human Resource(HR)</h1>
             <p class="career-text">We are looking for a person who is suiatable for our Human Resource.</p>
-            <a class="career-btn" href="Career/forhr.html">Apply Now</a>
+            <a class="career-btn" href="forhr.html">Apply Now</a>
         </div>
     </section>
 
