--- a/forhr.html
+++ b/forhr.html
@@ -8,9 +8,9 @@
     <!-- Fontawsome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- CSS Link -->
-    <link rel="stylesheet" href="../Styles/header.css">
-    <link rel="stylesheet" href="../Styles/singelcareer.css">
-    <link rel="stylesheet" href="../Styles/footer.css">
+    <link rel="stylesheet" href="Styles/header.css">
+    <link rel="stylesheet" href="Styles/singelcareer.css">
+    <link rel="stylesheet" href="Styles/footer.css">
 
     <title>USD | Career</title>
     <link rel="shortcut icon" type="image/png" href="../Assets/Images/USD.png">
@@ -23,50 +23,50 @@
             <span class="fas fa-bars"></span>
         </div>
         <div class="logo">
-            <img src="../Assets/Images/USD.png" alt="Loading...">
+            <img src="Assets/Images/USD.png" alt="Loading...">
         </div>
         <div class="nav-list">
             <ul>
-                <li><a class="actived" href="../index.html">Home</a></li>
+                <li><a class="actived" href="index.html">Home</a></li>
                 <li><a href="#">Academic Programme</a>
                     <ul class="dropdown">
                         <li>
                             <h5 class="main-child">Postgrade</h5>
                             <ul class="dropdownb">
-                                <li><a href="../PhD.html">PhD</a></li>
-                                <li><a href="../masters.html">Masters</a></li>
+                                <li><a href="PhD.html">PhD</a></li>
+                                <li><a href="masters.html">Masters</a></li>
                             </ul>
                         </li>
                         <li>
                             <h5 class="main-child">Undergrade</h5>
                             <ul class="dropdownb">
-                                <li><a href="../bechelors.html">Bechelors</a></li>
+                                <li><a href="bechelors.html">Bechelors</a></li>
                             </ul>
                         </li>
                         <li>
                             <h5 class="main-child">Specialized</h5>
                             <ul class="dropdownb">
-                                <li><a href="../diploma.html">Diploma</a></li>
-                                <li><a href="../shortcourse.html">Short Course</a></li>
-                                <li><a href="../workshop.html">Workshop</a></li>
-                                <li><a href="../traning.html">Traning</a></li>
+                                <li><a href="diploma.html">Diploma</a></li>
+                                <li><a href="shortcourse.html">Short Course</a></li>
+                                <li><a href="workshop.html">Workshop</a></li>
+                                <li><a href="traning.html">Traning</a></li>
                             </ul>
                         </li>
                     </ul>
                 </li>
-                <li><a href="../patners.html">Patners</a></li>
-                <li><a href="../activities.html">Activities</a></li>
+                <li><a href="patners.html">Patners</a></li>
+                <li><a href="activities.html">Activities</a></li>
                 <li><a href="#">About</a>
                     <ul class="dropdown">
-                        <li><a href="../story.html">Story</a></li>
-                        <li><a href="../vision.html">Vision</a></li>
-                        <li><a href="../mission.html">Mission</a></li>
-                        <li><a href="../team.html">Team</a></li>
+                        <li><a href="story.html">Story</a></li>
+                        <li><a href="vision.html">Vision</a></li>
+                        <li><a href="mission.html">Mission</a></li>
+                        <li><a href="team.html">Team</a></li>
                     </ul>
                 </li>
-                <li><a href="../Journals.html">Journals</a></li>
-                <li><a href="../career.html">Career</a></li>
-                <li><a href="../contact.html">Contact</a></li>
+                <li><a href="Journals.html">Journals</a></li>
+                <li><a href="career.html">Career</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="search-icon">
@@ -156,13 +156,13 @@
             <h3 class="footer-title">Quick Links</h3>
             <p class="footer-text">From here you can search accademic programmes</p>
             <ul class="links">
-                <li><a href="../PhD.html">PhD</a></li>
-                <li><a href="../masters.html">Masters</a></li>
-                <li><a href="../bechelors.html">Bachelors</a></li>
-                <li><a href="../diploma.html">Deploma</a></li>
-                <li><a href="../shortcourse.html">Short Course</a></li>
-                <li><a href="../workshop.html">Workshop</a></li>
-                <li><a href="../traning.html">Traning</a></li>
+                <li><a href="PhD.html">PhD</a></li>
+                <li><a href="masters.html">Masters</a></li>
+                <li><a href="bechelors.html">Bachelors</a></li>
+                <li><a href="diploma.html">Deploma</a></li>
+                <li><a href="shortcourse.html">Short Course</a></li>
+                <li><a href="workshop.html">Workshop</a></li>
+                <li><a href="traning.html">Traning</a></li>
             </ul>
         </div>
 
@@ -185,7 +185,7 @@
 
 
     <!-- Javascript Link -->
-    <script src="../Js/header.js"></script>
+    <script src="Js/header.js"></script>
 
 </body>
 
