Mission Vision Story

--- a/activities.html
+++ b/activities.html
@@ -31,6 +31,7 @@
                 <li><a href="#">Academic Programme</a>
                     <ul class="dropdown">
                         <li>
+                            <h5 class="main-child"></h5>
                             <h5 class="main-child">Postgrade</h5>
                             <ul class="dropdownb">
                                 <li><a href="PhD.html">PhD</a></li>
@@ -58,6 +59,7 @@
                 <li><a href="activities.html">Activities</a></li>
                 <li><a href="#">About</a>
                     <ul class="dropdown">
+                        <h5 class="main-child"></h5>
                         <li><a href="story.html">Story</a></li>
                         <li><a href="vision.html">Vision</a></li>
                         <li><a href="mission.html">Mission</a></li>
