--- a/mission.html
+++ b/mission.html
@@ -80,7 +80,7 @@
     <!-- Mission Section Start -->
     <section class="mission">
         <h1 class="mission-title">Our Mission</h1>
-        <p class="mission-text"><sub class="comma">"</sub>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, obcaecati, repellendus doloremque sunt eligendi, laborum iste facere illum deserunt laudantium sapiente? Nam, accusantium repellendus tempora exercitationem autem quaerat aspernatur pariatur tempore nobis! Neque consequatur quisquam, deserunt non ratione ea minima aliquid iste modi sequi consequuntur quia sint tempora suscipit. Praesentium sequi ipsa velit sit laudantium impedit rem harum non voluptate in laborum, quibusdam tempore vitae consequuntur veniam aliquid quisquam. Nulla impedit temporibus veniam, obcaecati accusamus sed totam iusto laborum consectetur omnis asperiores dolore quia nam quas perspiciatis eum minima harum dolorum nobis, cumque illum adipisci sequi iste illo! Velit, qui!<sub class="comma">"</sub></p>
+        <p class="mission-text"><sub class="comma">"</sub>To create innovative and dynamic development leaders who sketch the sustainable as well as inclusive solutions through cutting-edge, experiential Education, rigorous Training, and impactful Research. <sub class="comma">"</sub></p>
     </section>
     
     <!-- Mission Section End -->
