--- a/story.html
+++ b/story.html
@@ -81,7 +81,9 @@
 
     <section class="story">
         <h1 class="story-title">Our Story</h1>
-        <p class="story-text"><sub class="comma">"</sub>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, obcaecati, repellendus doloremque sunt eligendi, laborum iste facere illum deserunt laudantium sapiente? Nam, accusantium repellendus tempora exercitationem autem quaerat aspernatur pariatur tempore nobis! Neque consequatur quisquam, deserunt non ratione ea minima aliquid iste modi sequi consequuntur quia sint tempora suscipit. Praesentium sequi ipsa velit sit laudantium impedit rem harum non voluptate in laborum, quibusdam tempore vitae consequuntur veniam aliquid quisquam. Nulla impedit temporibus veniam, obcaecati accusamus sed totam iusto laborum consectetur omnis asperiores dolore quia nam quas perspiciatis eum minima harum dolorum nobis, cumque illum adipisci sequi iste illo! Velit, qui!<sub class="comma">"</sub></p>
+        <p class="story-text"><sub class="comma">"</sub>This tertiary level research-based educational institute kicks-off its journey with an aim to serve the world as an intellectual hub where the enthusiastic learners interact for innovative, smart, measurable, attainable, feasible solutions tackling the pressing social needs in a sustainable as well as inclusive way. <sub class="comma">"</sub></p>
+
+        <p class="story-text">This is the legacy of Forida Seraj Ideal School & College (FSISC) established in the year 2011 in Dhaka, Bangladesh. </p>
     </section>
     
     <!-- Story Section End -->
