--- a/activities.html
+++ b/activities.html
@@ -31,7 +31,6 @@
                 <li><a href="#">Academic Programme</a>
                     <ul class="dropdown">
                         <li>
-                            <h5 class="main-child"></h5>
                             <h5 class="main-child">Postgrade</h5>
                             <ul class="dropdownb">
                                 <li><a href="PhD.html">PhD</a></li>
@@ -41,7 +40,7 @@
                         <li>
                             <h5 class="main-child">Undergrade</h5>
                             <ul class="dropdownb">
-                                <li><a href="bechelors.html">Bechelors</a></li>
+                                <li><a href="bechelors.html">Bechelor</a></li>
                             </ul>
                         </li>
                         <li>
@@ -55,18 +54,17 @@
                         </li>
                     </ul>
                 </li>
-                <li><a href="patners.html">Patners</a></li>
+                <li><a href="patners.html">Partners</a></li>
                 <li><a href="activities.html">Activities</a></li>
                 <li><a href="#">About</a>
                     <ul class="dropdown">
-                        <h5 class="main-child"></h5>
                         <li><a href="story.html">Story</a></li>
                         <li><a href="vision.html">Vision</a></li>
                         <li><a href="mission.html">Mission</a></li>
                         <li><a href="team.html">Team</a></li>
                     </ul>
                 </li>
-                <li><a href="journals.html">Journals</a></li>
+                <li><a href="journals.html">Journal</a></li>
                 <li><a href="career.html">Career</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
