--- a/vision.html
+++ b/vision.html
@@ -40,7 +40,7 @@
                         <li>
                             <h5 class="main-child">Undergrade</h5>
                             <ul class="dropdownb">
-                                <li><a href="bechelors.html">Bechelors</a></li>
+                                <li><a href="bechelors.html">Bechelor</a></li>
                             </ul>
                         </li>
                         <li>
@@ -54,7 +54,7 @@
                         </li>
                     </ul>
                 </li>
-                <li><a href="patners.html">Patners</a></li>
+                <li><a href="patners.html">Partners</a></li>
                 <li><a href="activities.html">Activities</a></li>
                 <li><a href="#">About</a>
                     <ul class="dropdown">
@@ -64,7 +64,7 @@
                         <li><a href="team.html">Team</a></li>
                     </ul>
                 </li>
-                <li><a href="journals.html">Journals</a></li>
+                <li><a href="journals.html">Journal</a></li>
                 <li><a href="career.html">Career</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
