--- a/contact.html
+++ b/contact.html
@@ -81,18 +81,19 @@
 
     <section class="contract">
         <div class="contract-info">
-            <h2 class="contact-title">CONTACT INFO</h2>
+            <h2 class="contact-title">Contact Info</h2>
             <iframe title="" class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58373.545219799154!2d90.22635139107065!3d23.877326074803047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755ebd3d6df9569%3A0x277b3819d4da3e91!2sSavar%20Union!5e0!3m2!1sen!2sbd!4v1679664212361!5m2!1sen!2sbd" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            <div><i class="fas fa-map-marker-alt"></i>Saver, Dhaka, BANGLADESH</div>
-            <div><i class="fas fa-envelope-square"></i>info@usd.edu</div>
+            <div><i class="fas fa-map-marker-alt"></i>Hazi Alam Hossen Road, Chand Uddyan Housing,<br>Beribadh, Mphammadpur, <br>Dhaka-1207, Bangladesh 
+                </div>
+            <div><i class="fas fa-envelope-square"></i>info.usd@gmail.com</div>
             <div><i class="fas fa-phone-square-alt"></i>01712345678</div>
-            <div><i class="fas fa-clock"></i>Sunday to Friday - 10AM TO 8PM</div>
+            <div><i class="fas fa-clock"></i>Sunday to Friday - 10am TO 8pm</div>
         </div>
         <div class="contract-form">
-            <h2 class="contact-title">CONTACT US</h2>
+            <h2 class="contact-title">Contact Us</h2>
             <form class="contract-form-section" action="" method="post">
-                <input type="text" name="" class="text-box" placeholder="Name" required>
-                <input type="email" name="" class="text-box" placeholder="E-MAIL abc@mail.com" required>
+                <input type="text" name="" class="text-box" placeholder="Enter Name" required>
+                <input type="email" name="" class="text-box" placeholder="Enter Email" required>
                 <input type="text" name="" class="text-box" placeholder="Country of Residence" required>
                 <input type="text" name="" class="text-box" placeholder="WhatsApp (if you want to add)">
                 <select class="text-box" name="" id="">
@@ -103,7 +104,7 @@
                     <option value="General Enquiry">General Enquiry</option>
                     <option value="Other">Other</option>
                 </select>
-                <textarea name="" rows="5" placeholder="PLEASE ENTER YOUR MESSAGE HERE" required></textarea>
+                <textarea name="" rows="5" placeholder="Enter Your Message Here" required></textarea>
                 <input type="submit" name="submit" class="send-btn" value="Send">
             </form>
         </div>
