--- a/story.html
+++ b/story.html
@@ -83,7 +83,14 @@
         <h1 class="story-title">Our Story</h1>
         <p class="story-text"><sub class="comma">"</sub>This tertiary level research-based educational institute kicks-off its journey with an aim to serve the world as an intellectual hub where the enthusiastic learners interact for innovative, smart, measurable, attainable, feasible solutions tackling the pressing social needs in a sustainable as well as inclusive way. <sub class="comma">"</sub></p>
 
-        <p class="story-text">This is the legacy of Forida Seraj Ideal School & College (FSISC) established in the year 2011 in Dhaka, Bangladesh. </p>
+        <p class="story-text">This is the legacy of Forida Seraj Ideal School & College (FSISC) established in the year 2011 in Dhaka, Bangladesh which has been delivering its excellence and marking the sign of eminence through quality education among the poor pupils, children, and adolescents resided in Dhaka city of Bangladesh. With an aim to operate educational activities, It has gained permission and accreditation from the concerned departments of the Ministry of Education of the People's Republic of Bangladesh. </p>
+
+        <div class="images">
+            <img src="Assets/Images/Story/Pic1.jpg" alt="">
+            <img src="Assets/Images/Story/Pic2.jpg" alt="">
+            <img src="Assets/Images/Story/Pic3.jpg" alt="">
+            <img src="Assets/Images/Story/Pic4.jpg" alt="">
+        </div>
     </section>
     
     <!-- Story Section End -->
