--- a/journals.html
+++ b/journals.html
@@ -86,9 +86,8 @@
 
         <h5 class="journal-heading">About the Journal: </h5>
         <p class="journal-text">International Journal of Knowledge Platform (IJKP) is an independent, international, open access, bi-monthly, peer-reviewed general journal laid its foundation in 2021. It is committed to contributing to the translation of scientific knowledge into action through making available the research works of multiple disciplines conducted by the academicians, professionals, and the researchers from different parts of the world. Instrumentally, the published scientific works certainly bears the power of positive changes worldwide in a multi-dimensional way through unparalleled level of global reach and consequently, its impact propels the shape of human lives and the planet.</p>
-        <p class="journal-text">Notably, the IJKP accepts all the research works covering various disciplinary branches which has the vivid contribution to the knowledge world like Health Sciences, Social Sciences, Public Health, Religion, Environmental Science, Humanities, Technology, etc. 
-            For detailed info. Please visit the journal website.
-            </p>
+        <p class="journal-text">Notably, the IJKP accepts all the research works covering various disciplinary branches which has the vivid contribution to the knowledge world like Health Sciences, Social Sciences, Public Health, Religion, Environmental Science, Humanities, Technology, etc. </p>
+        <p class="journal-text">For detailed info. Please visit the journal website.</p>
     </section>
     <!-- Journal Section End -->
 
